Make link to heading

--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
             }
             .content {
                 white-space: pre;
-
+            }
+            a.content{
+                color: rgb(255, 246, 162);
+                text-decoration: none;
             }
 
         </style>
     </head>
     <body>
-    <a class="content" href="https://app.monosketch.io/" style="text-decoration: none;" title="Start using app">
+    <a class="content" href="https://app.monosketch.io/" title="Start using app">
                                                   _             _            _
                                                  | |           | |          | |
       _ __ ___     ___    _ __     ___      ___  | | __   ___  | |_    ___  | |__
@@ -44,10 +47,10 @@
     </a>
 
     <h1 id="whatisthis">
-        <span class="content">
+        <a href="#whatisthis" class="content">
         ╦ ╦┬ ┬┌─┐┌┬┐  ┬┌─┐  ┌┬┐┬ ┬┬┌─┐┌─┐
         ║║║├─┤├─┤ │   │└─┐   │ ├─┤│└─┐ ┌┘
-        ╚╩╝┴ ┴┴ ┴ ┴   ┴└─┘   ┴ ┴ ┴┴└─┘ o</span>
+        ╚╩╝┴ ┴┴ ┴ ┴   ┴└─┘   ┴ ┴ ┴┴└─┘ o</a>
         <span class="hidden-text">What is this?</span>
     </h1>
     <span class="content">
@@ -76,10 +79,10 @@
     </span>
 
     <h1 id="features">
-        <span class="content">
+        <a href="#features" class="content">
       ╔═╗┌─┐┌─┐┌┬┐┬ ┬┬─┐┌─┐┌─┐
       ╠╣ ├┤ ├─┤ │ │ │├┬┘├┤ └─┐
-      ╚  └─┘┴ ┴ ┴ └─┘┴└─└─┘└─┘</span>
+      ╚  └─┘┴ ┴ ┴ └─┘┴└─└─┘└─┘</a>
         <span class="hidden-text">Features</span>
     </h1>
     <span class="content">
@@ -88,10 +91,10 @@
 
 
     <h1 id="limitations">
-        <span class="content">
+        <a href="#limitations" class="content">
       ╦  ┬┌┬┐┬┌┬┐┌─┐┌┬┐┬┌─┐┌┐┌┌─┐
       ║  │││││ │ ├─┤ │ ││ ││││└─┐
-      ╩═╝┴┴ ┴┴ ┴ ┴ ┴ ┴ ┴└─┘┘└┘└─┘</span>
+      ╩═╝┴┴ ┴┴ ┴ ┴ ┴ ┴ ┴└─┘┘└┘└─┘</a>
         <span class="hidden-text">Limitations</span>
     </h1>
     <span class="content">
@@ -103,10 +106,10 @@
 
 
     <h1 id="whyimadethis">
-        <span class="content">
+        <a href="#whyimadethis" class="content">
       ╦ ╦┬ ┬┬ ┬  ╦  ┌┬┐┌─┐┌┬┐┌─┐  ┌┬┐┬ ┬┬┌─┐┌─┐
       ║║║├─┤└┬┘  ║  │││├─┤ ││├┤    │ ├─┤│└─┐ ┌┘
-      ╚╩╝┴ ┴ ┴   ╩  ┴ ┴┴ ┴─┴┘└─┘   ┴ ┴ ┴┴└─┘ o</span>
+      ╚╩╝┴ ┴ ┴   ╩  ┴ ┴┴ ┴─┴┘└─┘   ┴ ┴ ┴┴└─┘ o</a>
         <span class="hidden-text">Why I made this?</span>
         <span class="content">
 
