Update title and favicon as well as adding link to github project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+    <title>Mono Sketch - a text drawing tool on web</title>
+    <link rel="icon" href="favicon.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -28,9 +31,12 @@
         .content {
             white-space: pre;
         }
-        a.content{
+        a.content {
             color: rgb(255, 246, 162);
             text-decoration: none;
+        }
+        a.content:hover {
+            color:rgb(149, 248, 91)
         }
         .graph {
             font-family: 'Courier New', Courier, monospace;
@@ -187,6 +193,22 @@
     friends of mine said that they were not allowed to install Monodraw as the
     policy from their companies, therefore, it's a good chance for developing
     something that works on the browser rather than a native app.
+
+    At the time I started this project, I almost had no experience with the web app.
+    It took me a while for quite standardized source code.
+    Kotlin/JS is used for writing the control logic and SASS for styling.
+
+    This project is <a href="https://github.com/tuanchauict/MonoSketch" target="#">Open Source</a> under Apache License version 2.0. Feel free to fork
+    and make one yourself or contribute to this project.
+
+    <a class="graph content" href="https://github.com/tuanchauict/MonoSketch" target="#">
+                            ╔═════════════════════════╗
+                            ║     CONTRIBUTE NOW      ║
+                            ╚═════════════════════════╝</a>
+
+
+
+
 
     </span>
 
