Align credit note

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 
 </span>
 
-<span class="content">(*) This page is created with the help of <a href="https://patorjk.com/software/taag/#p=display&h=0&f=Big&t=mono%20sketch" target="#">Patorik.com</a> for awesome ASCII fonts</span>
+<span class="content">
+    (*) This page is created with the help of <a href="https://patorjk.com/software/taag/#p=display&h=0&f=Big&t=mono%20sketch" target="#">Patorik.com</a> for awesome ASCII fonts</span>
 </body>
 </html>
