--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <span class="content">
         Another tool for drawing with letters.
         With MonoSketch, you can easily create simple diagrams with Texts, Rectangles,
-        and Lines (*)                                                                      (*) More shapes will be
+        and Lines [*]                                                                      [*] More shapes will be
                                                                                                supported in the future
         Example <span class="graph">
                     ┌───────────────────────────────────────────────┐
@@ -140,7 +140,7 @@
     ╩═╝┴┴ ┴┴ ┴ ┴ ┴ ┴ ┴└─┘┘└┘└─┘  └─┘┴└─  ╚  └─┘ ┴ └─┘┴└─└─┘  └  └─┘┴ ┴ ┴ └─┘┴└─└─┘└─┘</a>
 </h1>
 <span class="content">
-        - Not work well with Safari. (*)                                                   (*) I tried to debug the  CSS
+        - Not work well with Safari. [*]                                                   [*] I tried to debug the  CSS
                                                                                                and JS on Safari but could
         - Future work: See <a href="https://github.com/tuanchauict/MonoSketch/projects" target="#">Projects</a>                                                            not figure out how to fix
           + Multiple working workspaces                                                        the problems. (Issue <a href="https://github.com/tuanchauict/MonoSketch/issues/323" target="#">#323</a>)
@@ -212,6 +212,6 @@
 </span>
 
 <span class="content">
-    (*) This page is created with the help of <a href="https://patorjk.com/software/taag/#p=display&h=0&f=Big&t=mono%20sketch" target="#">Patorik.com</a> for awesome ASCII fonts</span>
+    [*] This page is created with the help of <a href="https://patorjk.com/software/taag/#p=display&h=0&f=Big&t=mono%20sketch" target="#">Patorik.com</a> for awesome ASCII fonts</span>
 </body>
 </html>
