Add landing page sketch file

--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
 </span>
 
 <span class="content">
-    [*] This page is created with the help of <a href="https://patorjk.com/software/taag/#p=display&h=0&f=Big&t=mono%20sketch" target="#">Patorik.com</a> for awesome ASCII fonts</span>
+    [*]  This page is created with the help of <a href="https://patorjk.com/software/taag/#p=display&h=0&f=Big&t=mono%20sketch" target="#">Patorik.com</a> for awesome ASCII fonts
+    [**] This landing page is painted by the MonoSketch app itself. It's great!
+         <a href="monosketch-landingpage.mono" target="#">Download and open this file</a> with <a href="https://app.monosketch.io/" target="#">Mono Sketch app</a> for your own pleasure.
+</span>
 </body>
 </html>
