--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>MonoSketch - a drawing tool with characters</title>
     <link href="style.css" rel="stylesheet"/>
     <script src="MonoSketch-web.js"></script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFGVEMQF8M"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BFGVEMQF8M');
+    </script>
 </head>
 <body>
 <article>
