--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div class="demo-container">
                 <pre id="demo-content"></pre>
             </div>
+            <div class="demo-page-indicators"></div>
         </div>
     </main>
     <script src="script.js"></script>
