--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <title>MonoSketch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="MonoSketch">
-    <meta property="og:description" content="MonoSketch is a powerful ASCII sketching and diagramming app that lets you effortlessly transform your ideas into visually stunning designs.">
+    <meta property="og:description"
+        content="MonoSketch is a powerful ASCII sketching and diagramming app that lets you effortlessly transform your ideas into visually stunning designs.">
     <meta property="og:url" content="https://monosketch.io/">
     <meta property="og:type" content="website">
 
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://app.monosketch.io/fonts/stylesheet.css">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFGVEMQF8M"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BFGVEMQF8M');
+    </script>
 </head>
 
 <body class="background">
