--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MonoSketch</title>
+    <title>MonoSketch - Unleash your ideas with ASCII</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="MonoSketch">
+    <meta property="og:title" content="MonoSketch - Unleash your ideas with ASCII">
     <meta property="og:description"
         content="MonoSketch is a powerful ASCII sketching and diagramming app that lets you effortlessly transform your ideas into visually stunning designs.">
     <meta property="og:url" content="https://monosketch.io/">
