--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://monosketch.io/">
     <meta property="og:type" content="website">
 
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="static/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://app.monosketch.io/fonts/stylesheet.css">
     <link rel="stylesheet" href="style.css">
 
